# CMake_Demo

./: CMakeLists.txt  README.md
calculator/src/: calculator.cpp
maths/: CMakeLists.txt
maths/include/: maths.h
maths/src/: maths.cpp
src/: main.cpp
